Stack using two queues and game of two stacks